изменение в json,css,html,js
увеличен список товаров переименование в магазин техники

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <img src="./data/images/56056.png" alt="Smile Shop" class="logo">
             <div class="brand-text">
                 <span class="brand-name">Smile Shop</span>
-                <span class="brand-subtitle">Смартфоны и аксессуары</span>
+                <span class="brand-subtitle">Магазин техники</span>
             </div>
         </a>
 
