--- a/index.html
+++ b/index.html
@@ -52,10 +52,13 @@
 
     <!-- Каталог -->
     <main id="catalog" class="catalog">
-        <div class="container">
-            <p>Здесь будут карточки товаров</p>
+    <div class="container">
+        <div class="product-grid" id="product-grid">
+            <!-- Карточки товаров вставляются сюда JavaScript'ом -->
         </div>
+    </div>
     </main>
+
 
     <!-- Подвал -->
     <footer class="site-footer">
